<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/tool_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wards"
                android:textStyle="bold"
                android:textColor="#fff"
                android:textSize="17sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rel_filter"
                android:layout_centerVertical="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter"
                    android:padding="5dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:textColor="#ffffff"
                    android:id="@+id/textView2"
                    android:background="@drawable/filter_box"/>

            </RelativeLayout>
        </RelativeLayout>

        <FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <GridView
                android:id="@+id/gridview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:verticalSpacing="2dp"
                android:horizontalSpacing="2dp"
                android:stretchMode="columnWidth"
                android:numColumns="2"
                android:scrollbars="none"/>

            <ProgressBar
                android:visibility="gone"
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </FrameLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/emptyElement"
        android:background="@drawable/emptybox"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:contentDescription="@string/todo" />

</RelativeLayout>