<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="Ward Activity"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lin_wallet"
        android:scrollbars="none">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TableLayout android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.3">

        <Button
            android:id="@+id/crime"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/crime"
            android:typeface="normal"
            android:textSize="15dp"
            android:textColor="#ffffff"
            android:fontFamily="serif"
            android:background="@drawable/crime"
            android:singleLine="false"
            android:layout_marginRight="0.5dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="0.5dp"
            android:foregroundGravity="center"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/infra_prob"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:typeface="normal"
            android:text="@string/infrastructure_problems"
            android:textSize="15dp"
            android:textColor="#ffffff"
            android:background="@drawable/infra_problem"
            android:layout_marginBottom="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:paddingBottom="10dp"
            android:foregroundGravity="center"
            android:textAllCaps="false" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.3">

        <Button
            android:id="@+id/fun_act"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:typeface="normal"
            android:text="@string/fun_activity"
            android:textSize="15dp"
            android:textColor="#ffffff"
            android:fontFamily="serif"
            android:background="@drawable/fun_activity"
            android:layout_marginTop="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginBottom="0.5dp"
            android:paddingBottom="10dp"
            android:foregroundGravity="center"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/opportunity"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:typeface="normal"
            android:textSize="15dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:textColor="#ffffff"
            android:text="@string/opportunity"
            android:fontFamily="serif"
            android:background="@drawable/opportunities"
            android:layout_marginBottom="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginTop="0.5dp"
            android:textAllCaps="false" />

    </TableRow>

    </TableLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/war_mem"
                android:text="@string/ward_members"
                android:textSize="18dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"/>

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progress_bar1"
                android:visibility="gone"/>

            <ListView
                android:id="@+id/recent_list"
                android:layout_width="match_parent"
                android:layout_below="@+id/war_mem"
                android:layout_height="450dp"
                android:divider="@null"
                android:padding="10dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:scrollbars="none">
            </ListView>

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/emptybox"
                android:visibility="invisible"
                android:layout_below="@+id/war_mem"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="118dp"
                android:layout_marginEnd="118dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/curve_btn"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/forward_white_24dp"
                android:padding="10dp"
                android:text="See More"
                android:textColor="#ffffff" />

        </RelativeLayout>

    </LinearLayout>

    </FrameLayout>

    </ScrollView>

</LinearLayout>