<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/base"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context="fragments.GuidePageActivity2">




    <com.nightonke.wowoviewpager.WoWoViewPager
        android:id="@+id/wowo_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <View
        android:id="@+id/circle"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-20dp"
        android:background="@drawable/background_gray_black_circle"
        />

    <FrameLayout
        android:id="@+id/login_layout"
        android:layout_width="250dp"
        android:layout_height="315dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp">

            <custom_font.MyEditText
                android:digits="abcdefghijklmnopqrstuvwxyz1234567890@_.-"
                android:id="@+id/user_id"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:textColorHint="#aeb0a5"
                android:hint="@string/enter_your_email"
                android:layout_gravity="center"
                android:inputType="text"
                android:textColor="#fff"
                android:background="#00000000"
                android:textSize="13sp"
                android:letterSpacing="0.1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#c1c1c1"
                android:layout_marginTop="5dp" />

            <custom_font.MyEditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:textColorHint="#aeb0a5"
                android:hint="@string/enter_your_password"
                android:layout_gravity="center"
                android:textColor="#fff"
                android:inputType="textPassword"
                android:background="#00000000"
                android:textSize="13sp"
                android:letterSpacing="0.1"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#c1c1c1"
                android:layout_marginTop="5dp" />

            <custom_font.MyTextView
                android:id="@+id/forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/forgot_password"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:textSize="11dp" />

        </LinearLayout>


        <Button
            android:id="@+id/signIn"
            android:layout_above="@+id/signUp"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:scaleType="fitXY"
            android:background="@drawable/button_shape"
            android:text="SIGN IN"
            android:textColor="#fff"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_gravity="bottom|center_horizontal"/>

        <custom_font.MyTextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom|center_horizontal"
            />



    </FrameLayout>





    <TextView
        android:id="@+id/text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:gravity="center"
        android:textColor="#05502f"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="100dp"/>

    <ImageView
        android:id="@+id/planet_target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/planet_target"
        tools:ignore="ContentDescription"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/meteor"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/meteor"
        android:layout_marginLeft="-100dp"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/planet_0"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/planet_0"
        android:layout_marginTop="-150dp"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/planet_1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/planet_1"
        android:layout_gravity="center_vertical|right"
        android:layout_marginRight="-150dp"
        tools:ignore="ContentDescription" />


 <!--   <com.github.siyamed.shapeimageview.HexagonImageView
        android:id="@+id/planet_1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_vertical|right"
        android:src="@drawable/crime"
        android:layout_marginRight="-150dp"
        app:siBorderType="stroke"
        app:siBorderWidth="4dp"
        app:siBorderColor="#92d9ca7e"
        tools:ignore="ContentDescription"/>-->



    <ImageView
        android:id="@+id/earth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/earth"
        tools:ignore="ContentDescription"
        android:visibility="invisible"/>

    <com.nightonke.wowoviewpager.WoWoPathView
        android:id="@+id/path_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:wowo_pathColor="@color/rocket_fire"
        app:wowo_pathWidth="2dp"
        app:wowo_dynamicPath="true"
        app:wowo_headImageSrc="@drawable/rocket"
        app:wowo_headImageWidth="60dp"
        />

    <ImageView
        android:id="@+id/cloud_red"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="130dp"
        android:src="@drawable/cloud_red"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/cloud_yellow"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/full_logo"
        android:layout_marginLeft="100dp"
        android:elevation="5dp"
        android:layout_marginTop="50dp"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/cloud_blue"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/cloud_blue"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="150dp"
        android:visibility="invisible"
        tools:ignore="ContentDescription" />



</FrameLayout>
